--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,7 +14,7 @@
       {% endif %}
           <div>
             {% if site.black-favicon %}
-              <img src="{{site.baseurl}}{{ site.black-favicon }}" alt="">
+              <img src="{{site.baseurl}}{{ site.black-favicon }}" alt="" style="height: 1em">
             {% endif %}
             {{ site.title }}
           </div>
