Fix a bug with an inner circle in white

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -22,7 +22,7 @@
               {% if event.image %}
                 <img class="img-circle img-responsive" src="{{site.baseurl}}{{ event.image }}" alt="">
               {% else %}
-                <img class="img-circle img-responsive" src="{{site.baseurl}}/img/empty.png" alt="">
+                <img class="img-circle img-responsive" src="" alt="">
               {% endif %}
             </div>
             <div class="timeline-panel">
