Fix empty image src

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -46,7 +46,7 @@
 
         <li class="timeline-inverted">
           <div class="timeline-image">
-            <img class="img-circle img-responsive" src="{{site.baseurl}}{{ site.timeline-img }}" alt="">
+            <img class="img-circle img-responsive" src="" alt="">
           </div>
         </li>
       </ul>
