--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,7 @@
 
     <div class="container text-center">
       <p>Copyright &copy; {{ site.author }} {{ site.time | date: "%Y" }}</p>
+      <p>Picture &copy; Mathieu Rouvinez {{ site.time | date: "%Y" }}</p>
     </div>
 </footer>
 
